typescript/checker/tests/conformance/parser/ecmascript3/Accessors/parserES3Accessors3.ts.stderr
error: jsc.taraget should be es5 or upper to use getter / setter
 --> $DIR/tests/conformance/parser/ecmascript3/Accessors/parserES3Accessors3.ts:1:15
  |
1 | var v = { get Foo() { } };
  |               ^^^

error: A 'get' accessor must return a value.
 --> $DIR/tests/conformance/parser/ecmascript3/Accessors/parserES3Accessors3.ts:1:15
  |
1 | var v = { get Foo() { } };
  |               ^^^

